<resources>
    <string name="app_name">Grocery Shopping Assistant</string>

    <!--Api Rest Activity-->
    <!--Button-->
    <string name="getButtonText">Obtener</string>

    <!--Code-->
    <string name="apiError">Hay un error con el recurso de la api</string>
    <string name="api_instruction">Presioan el botón para obtener información</string>

    <!--GroceryShoppingListActivity-->
    <!--Button-->
    <string name="addProductB">Añadir Producto</string>

    <!--AddProductToGSLActivity-->
    <!--EditText-->
    <string name="nameET_APTGSL">Nombre</string>
    <string name="priceET_APTGSL">Precio</string>
    <string name="amountET_APTGSL">Cantidad</string>
    <string name="descriptionET_APTGSL">Descripción</string>
    <string name="categoryET_APTGSL">Categoria</string>

    <!--Code-->
    <string name="nameIsNullAPTGSLA">El campo del nombre no puede estar vacio.</string>
    <string name="categoryIsNullAPTGSLA">El campo de la categoria no puede estar vacio.</string>
    <string name="descriptionIsNullAPTGSLA">El campo de la descripción no puede estar vacio.</string>
    <string name="amountIsNullAPTGSLA">El campo de la cantidad no puede estar vacio.</string>
    <string name="amountIsUnder1">La cantidad debe ser como mínimo 1.</string>
    <string name="priceIsNullAPTGSLA">El campo del precio no puede estar vacio.</string>
    <string name="priceIsUnder1">El precio debe ser como mínimo 1.</string>
    <string name="productExists">¡El producto ya existe!</string>
    <string name="searchWhenProductsAreEmpty">No hay productos.</string>

    <!-- MovementsInfoActivity-->
    <string name="movements_info_name">Registro de Movimientos</string>

    <!--PantryInventoryActivity-->
    <string name="pantryInventoryName">Despensa</string>

    <!--AddProductToPIActivity-->
    <!--Adapters-->

    <string name="productId">ID</string>
    <string name="productName">Nombre</string>
    <string name="productPrice">Precio</string>
    <string name="productAmount">Cantidad</string>
    <string name="productDescription">Descripción</string>
    <string name="productCategory">Categoria</string>
    <string name="movementInfoAction">Acción</string>
    <string name="movementInfoProductId">Id del Producto</string>
    <string name="addActionAdap">Agregado</string>
    <string name="updateActionAdap">Actualizado</string>
    <string name="deleteActionAdap">Eliminado</string>


    <!-- Main Menu -->

    <!-- MenuItem -->
    <string name="preferences_item">Ir a las Preferencias</string>
    <string name="add_product_item">Añadir un Producto</string>
    <string name="movement_info_item">Ir a los Registros de Movimiento</string>
    <string name="api_request_item">Prueba de API</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="search_product_item">Buscar Producto</string>

    <!-- ProductItem -->
    <string name="see_details_andor_change_amount_item">Ver Detalles y/o Cambiar Cantidad y Precio</string>
    <string name="edit_item">Editar</string>
    <string name="delete_item">Eliminar</string>

    <!-- SearchProduct -->
    <string name="search_by_item">Buscar Por</string>

    <!-- SeeProductDetails -->
    <string name="save_string">Guardar</string>

    <!-- Dialog -->
    <string name="deleteDTitle">Eliminar Producto</string>
    <string name="deleteDMessage">¿Desea eliminar este producto?</string>
    <string name="yesDLabel">Sí</string>
    <string name="noDLabel">No</string>

    <!-- Preference Titles -->
    <string name="preferences_title">Preferencias</string>

    <!-- Preference Fields -->
    <string name="order_by_text">Ordernar Productos Por</string>
    <string name="order_by_add">Por Orden de Agregado</string>
    <string name="order_by_name">Por Nombre</string>
    <string name="order_by_price">Por Precio</string>
    <string name="order_by_amount">Por Cantidad</string>
    <string name="order_by_description">Por Descripción</string>
    <string name="order_by_category">Por Categoría</string>

</resources>