<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/preferencesItem"
        android:title="@string/preferences_item" />
    <item
        android:id="@+id/searchProductItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/search_product_item" />
    <item
        android:id="@+id/addProductItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/add_product_item" />
    <item
        android:id="@+id/movementInfoItem"
        android:title="@string/movement_info_item" />
    <item
        android:id="@+id/apiRequestItem"
        android:title="@string/api_request_item" />
</menu>