<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/scaredPurple"
    tools:context=".AddProductToPIActivity">

    <Button
        android:id="@+id/buttonAddProductAPTPI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addProductB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.895" />

    <EditText
        android:id="@+id/editTextAmountAPTPI"
        android:layout_width="237dp"
        android:layout_height="74dp"
        android:ems="10"
        android:hint="@string/amountET_APTGSL"
        android:inputType="text"
        android:textColorHint="@color/hintColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.618" />

    <EditText
        android:id="@+id/editTextDescriptionAPTPI"
        android:layout_width="237dp"
        android:layout_height="74dp"
        android:ems="10"
        android:hint="@string/descriptionET_APTGSL"
        android:inputType="text"
        android:textColorHint="@color/hintColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.763" />

    <EditText
        android:id="@+id/editTextCategoryAPTPI"
        android:layout_width="237dp"
        android:layout_height="74dp"
        android:ems="10"
        android:hint="@string/categoryET_APTGSL"
        android:inputType="text"
        android:textColorHint="@color/hintColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476" />

    <EditText
        android:id="@+id/editTextPriceAPTPI"
        android:layout_width="237dp"
        android:layout_height="74dp"
        android:ems="10"
        android:hint="@string/priceET_APTGSL"
        android:inputType="text"
        android:textColorHint="@color/hintColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349" />

    <EditText
        android:id="@+id/editTextNameAPTPI"
        android:layout_width="237dp"
        android:layout_height="74dp"
        android:ems="10"
        android:hint="@string/nameET_APTGSL"
        android:inputType="text"
        android:textColorHint="@color/hintColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

</androidx.constraintlayout.widget.ConstraintLayout>