<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/scaredPurple"
    tools:context=".AddProductToGSLActivity">

    <Button
        android:id="@+id/buttonAddProductToGSL"
        android:layout_width="127dp"
        android:layout_height="58dp"
        android:text="@string/addProductB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935"
        tools:text="@string/addProductB" />

    <EditText
        android:id="@+id/editTextNameAPTGSL"
        android:layout_width="257dp"
        android:layout_height="64dp"
        android:ems="10"
        android:hint="@string/nameET_APTGSL"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185" />

    <EditText
        android:id="@+id/editTextPriceAPTGSL"
        android:layout_width="257dp"
        android:layout_height="64dp"
        android:ems="10"
        android:hint="@string/priceET_APTGSL"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <EditText
        android:id="@+id/editTextAmountAPTGSL"
        android:layout_width="257dp"
        android:layout_height="64dp"
        android:ems="10"
        android:hint="@string/amountET_APTGSL"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <EditText
        android:id="@+id/editTextDescriptionAPTGSL"
        android:layout_width="257dp"
        android:layout_height="64dp"
        android:ems="10"
        android:hint="@string/descriptionET_APTGSL"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557" />

    <EditText
        android:id="@+id/editTextCategoryAPTGSL"
        android:layout_width="257dp"
        android:layout_height="64dp"
        android:ems="10"
        android:hint="@string/categoryET_APTGSL"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678" />
</androidx.constraintlayout.widget.ConstraintLayout>